syntax = "proto3";

service PCSService {
  rpc runWorker(PCSRunWorkerRequest) returns (PCSRunWorkerReply);
  rpc runStorage(PCSRunStorageRequest) returns (PCSRunStorageReply);
  rpc runScheduler(PCSRunSchedulerRequest) returns (PCSRunSchedulerReply);
  rpc listServer(PcsListServerRequest) returns (PcsListServerReply);
  rpc listGlobal(PcsListGlobalRequest) returns (PcsListGlobalReply);
}

message PCSRunWorkerRequest {
	string id = 1;  // the id of the object being read
//	string url = 2;
  int32 gossip_delay = 2;
  bool debug = 3;
}

message PCSRunWorkerReply {
	bool ok = 1;
  string result = 2;
}

message PCSRunStorageRequest {
    string id = 1;  // the id of the object being read
//	  string port = 2;
    int32 gossip_delay = 2;
    bool debug = 3;
}

message PCSRunStorageReply {
    bool ok = 1;
    string result = 2;
}

message PCSRunSchedulerRequest {
  string id = 1;  // the id of the object being read
  bool debug = 2;
}

message PCSRunSchedulerReply {
  bool ok = 1;
  string result = 2;
}

message PcsListServerRequest {
  int32 id = 1;
}

message PcsListServerReply {
  repeated string objects = 1;
}

message PcsListGlobalRequest { }

message PcsListGlobalReply {
  repeated string objects = 1;
}